# smartmeet-agent-suite

./: .env.example  .gitignore  AGENTS.md  CREDITS.txt  README.md  TODO.md  demos_meta.json  environment.yml  pyproject.toml  start.bat  start.sh  start_launcher.py  test_pdf.py
agents/: .gitkeep  __init__.py  _utils.py  action_agent.py  followup_agent.py  insight_agent.py  meeting_graph.py  speaker_inference_agent.py  summary_agent.py
api/: main.py
api/routes/: __init__.py  analyze.py  config.py  recording.py  render.py  tasks.py  websocket.py
assets/: .gitkeep  notes-template.tex  style.css
cli/: main.py
core/: .gitkeep
demos/: .gitkeep
demos/01557ab5-2ac/: 01557ab5-2ac_创业产品立项讨论会.md  01557ab5-2ac_创业产品立项讨论会_mindmap.md  01557ab5-2ac_创业产品立项讨论会_transcript.txt  final_result.json  final_result_mock.json
demos/c7273255-89b/: c7273255-89b_大模型技术探索与思考.md  c7273255-89b_大模型技术探索与思考_mindmap.md  c7273255-89b_大模型技术探索与思考_transcript.txt  final_result.json
desktop/: .gitkeep
docs/: .gitkeep  api-reference.md  architecture.md  deployment-guide.md
engines/document/: html_engine.py  markdown_parser.py  mindmap_engine.py
engines/media/: diarizer.py  parser.py  transcriber.py
frontend/: .env.example  package.json  vercel.json
infrastructure/persistence/: __init__.py  checkpoint_service.py  task_queue.py  task_service.py
intelligence/graphs/: __init__.py  (+1 more)
interfaces/: __init__.py
mcp/: .gitkeep  package-lock.json  package.json
schemas/: __init__.py  job_config.py  meeting_schemas.py  meeting_state.py  task_schema.py
scripts/: fix_css.py  migrate_mindmaps.py
services/: .gitkeep  __init__.py  application_service.py  checkpoint_service.py  task_queue.py  task_service.py
skill/: .gitkeep
tests/: test_api_recording.py  test_feishu_direct.py  test_followup_workflow_integration.py  test_llm_client.py  test_media_engine.py  test_schema_contracts.py  test_summary_map_reduce.py
tmp_workspace/: split_app.py
utils/: __init__.py  file_system.py  serialization.py  text_parser.py
web/: .gitkeep
workers/: arq_worker.py
workflows/: __init__.py  meeting_workflow.py
(+107 files in other folders)
