[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmeet-agent-suite"
version = "1.0.0"
description = "企业级多模态智能会议与全链路协同 Agent 解决方案 (Enterprise Smart Meeting & Agent Collaboration Suite)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "SmartMeet Team"}]

dependencies = [
    # === LLM & Agent Framework (LangGraph) ===
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",

    # === Web & API Gateway ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0",

    # === Enterprise Integrations (Jira, Feishu) ===
    "jira>=3.8.0",
    "requests>=2.32.0",

    # === Media Processing & Export (NoteKing Core) ===
    "yt-dlp>=2024.0",
    "youtube-transcript-api>=1.0.0",
    "pysrt>=1.1.2",
    "scenedetect[opencv]>=0.6",
    "weasyprint>=62.0",
    "noisereduce>=3.0.0",

    # === ASR & Diarization ===
    "faster-whisper>=1.0.0",
    "whisperx>=3.1.0",
    "pyannote.audio>=3.3.0",
    "funasr>=1.0.0",
    "modelscope>=1.10.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",

    # === Database & Vector Store ===
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",
    "arq>=0.25.0",

    # === Core Utilities ===
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "markdown>=3.0.0",
    "tenacity>=9.0.0",
    "apscheduler>=3.10.0",
    "rich>=13.0",
    "click>=8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
smartmeet = "interfaces.cli.main:main"

[tool.setuptools.packages.find]
include = ["interfaces*", "agents*", "services*", "schemas*", "workflows*", "utils*"]

[tool.pytest.ini_options]
pythonpath = ["."]
